compiler/tests/schema/error/int_out_of_range.bond

//this bond file is invalid; do not use as example


namespace tests

struct Test
{
     0: int16 i = 32768;
}